
	- Added links to important sites to menu
	- Added ability to enable and disable FirePHP from menu
	- Added FirePHP menu next to Firebug menu in Firebug UI
  - Updated FirePHP::TABLE to use new variable viewer for array/object values
  - Added variable viewer overlay
  - Bugfix - FF3 - Logging of events when Firebug is running in its own window
  - Bugfix - Improved custom stylesheet inclusion
  - FF3 - Updated request monitoring to use Firebug onLoad listener
	- Updated logo

2008-06-16 - Release Version: 0.1.0.1

	- Added support for FirePHP::TRACE log style
	- Updated background and font for FirePHP request group titles

2008-06-13 - Release Version: 0.1.0

  - Cleaned up code a bit
	- Removed debug print statements
	- Updated Firefox support version to 3.0.*
	- Updated license of the extension to the new BSD license

2008-06-07 - Release Version: 0.0.6.23

	- Bugfix - Moved jQuery to a namespace under FirePHPLib to avoid namespace conflicts with other extensions

2008-06-06 - Release Version: 0.0.6.22

	- Bugfix - FF2 - Only send FirePHP user-agent header when Firebug is enabled
	- Bugfix - FF3 - Only send FirePHP user-agent header when Firebug Net Panel is enabled
  - Added support for FirePHP::TABLE log style

2008-05-28 - Release Version: 0.0.6.20

  - Bugfix - FF3 - Call request processor on main page load
	- Bugfix - Display of POST parameters in Post tab of request inspector
	- Bugfix - Display of POST response in Response tab of request inspector
	- Bugfix - Escape all HTML chracters rendered in Server tab of request inspector

2008-05-15 - Release Version: 0.0.6.19

	- Bugfix - Expanding requests for Firebug 1.2

2008-05-15 - Release Version: 0.0.6.18

	- Added support for Firebug 1.2

2008-05-15 - Release Version: 0.0.6.17

	- Bugfix - Ensure custom log templates and stylesheets are added correctly at all times

2008-05-14 - Release Version: 0.0.6.16

  - Bugfix - Monitor page loading and trigger request processor for main page and iframes