@@ -33,6 +33,9 @@ FBL.ns(function() { with (FBL) {
         <menu id="menu_firephp" class="menuitem-iconic" image="chrome://firephp/skin/FirePHP_16.png"
               label="FirePHP" insertafter="menu_firebug">
             <menupopup onpopupshowing="return FirePHP.onOptionsShowing(this);">
+		
+			        <menuitem label="Welcome Page" oncommand="FirePHP.visitWebsite('welcome')"/>
+			        <menuseparator/>
 	            <menuitem type="checkbox" label="FirePHP Enabled"
 	                       oncommand="FirePHP.onToggleOption(this)"
 	                       option="enabled"/>
@@ -56,6 +59,8 @@ FBL.ns(function() { with (FBL) {
             
 	        <menupopup id="firephpMenuPopup" onpopupshowing="return FirePHP.onOptionsShowing(this);">
             
+		        <menuitem class="firephpMenuWelcomeItem" label="Welcome Page" oncommand="FirePHP.visitWebsite('welcome')"/>
+		        <menuseparator/>
             <menuitem type="checkbox" label="FirePHP Enabled"
                        oncommand="FirePHP.onToggleOption(this)"
                        option="enabled"/>
