@@ -1,4 +1,4 @@
 
 // Global
 pref("extensions.firephp.enabled", true);
-
+pref("extensions.firephp.previousVersion", 0);
